[package]
name = "adamant-halo2"
description = "Adamant-owned fork of the Halo 2 ecosystem (Zcash variant) per CLAUDE.md §14.4 Decision 1 (resolved as Path C2). Forking-over-vendoring discipline applied: production-binary dependency graph contains no upstream halo2_* crates."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

# Sub-arc map (filled in as the fork grows):
#
# | Sub-arc       | Surface                    | Status      |
# |---------------|----------------------------|-------------|
# | 6.8b.0        | poseidon (out-of-circuit)  | THIS SUB-ARC |
# | 6.8b.1+       | halo2_proofs subset        | pending     |
# | 6.8b.2+       | poseidon::Pow5Chip         | pending     |
# | 6.8b.3+       | ECC chips for Pallas       | pending     |
# | 6.8b.4+       | §7.3.2 validity-circuit    | pending     |
# | 6.9b          | recursive proof composition| pending     |
#
# Phase 6.8b.0 vendors `halo2_poseidon 0.1.0` as the smallest
# production-side surface — exercises the fork mechanics and
# replaces adamant-privacy's existing `halo2_gadgets::poseidon::primitives`
# import with an Adamant-owned path. See `PROVENANCE.md`.

[dependencies]
# Pasta cycle (Pallas / Vesta) — workspace bounded-ecosystem
# crate; consumed by both forked sub-modules `poseidon` and
# `proofs`.
pasta_curves = { workspace = true }
# `ff` and `group` are the upstream forks' public-trait surface
# (`ff::PrimeField`, `group::Group`). Pinned at the workspace
# level via direct entries.
ff = { version = "0.13", default-features = false, features = ["alloc", "bits"] }
group = { version = "0.13" }
# `indexmap` 1.x is the version pinned by upstream halo2_proofs
# 0.3.2; used by `proofs::dev` failure-emitter and a few `plonk`
# code paths. The 1.x major matches the workspace bound that
# upstream's Cargo.toml resolves to.
indexmap = "1"
# Random-bit generator for Poseidon round-constant generation
# (Grain LFSR). Required by `poseidon::grain`.
bitvec = { version = "1", default-features = false }
# RNG trait surface used by `proofs::transcript` and `proofs::plonk`.
# `rand_core` 0.6 matches the upstream halo2_proofs 0.3.2 trait
# version.
rand_core = { workspace = true }
# Hash function used by `proofs::transcript`'s default Blake2b
# transcript. Upstream halo2_proofs 0.3.2 dep.
blake2b_simd = "1"
# Sorting algorithm used by `proofs::poly::commitment::msm` for
# deterministic-order multi-scalar-multiplication preprocessing.
# Upstream halo2_proofs 0.3.2 dep.
halo2_legacy_pdqsort = "0.1.0"
# Optional rayon-backed parallelism wrapper. Upstream uses
# `maybe-rayon` to make multicore an optional feature; we
# inherit the same shape and gate it behind our `multicore`
# feature.
maybe-rayon = { version = "0.1.0", default-features = false }
# Tracing for upstream's logging surface. Used by
# `proofs::dev` and a few `proofs::plonk` trace points.
tracing = "0.1"
# Phase 6.8b.3 ECC chip deps:
# Fixed-capacity vector used by `ecc::chip`'s window
# decomposition.
arrayvec = "0.7"
# Lazy-initialised constants used by
# `ecc::chip::mul_fixed`'s scalar setup (`H_BASE`,
# `H_SCALAR`, `TWO_SCALAR`).
lazy_static = "1"
# 256-bit integer arithmetic for `ecc::chip::mul`'s scalar
# decomposition. Already in the workspace via
# `ethnum` for U256 elsewhere; upstream halo2_gadgets uses
# the `uint` crate's `U256` directly. We track the upstream
# choice here.
uint = { workspace = true }

[dev-dependencies]
# Dev-only deps used by upstream test modules across the vendored
# trees (`halo2_proofs 0.3.2` + `halo2_gadgets 0.3.1`).
assert_matches = "1.5"
proptest = { workspace = true }
# `rand_core::OsRng` is gated by the `getrandom` feature.
rand_core = { workspace = true, features = ["getrandom"] }
# `rand 0.8` for `OsRng` reference in `poseidon::pow5::tests`.
# Matches upstream halo2_gadgets's `[dev-dependencies]` rand
# version.
rand = { workspace = true }

[features]
# Mirrors upstream `halo2_poseidon`'s `test-dependencies` feature
# gating the `poseidon::primitives::test_vectors` module. Adamant
# uses this feature in cross-validation tests against the
# upstream tag.
test-dependencies = []
# Multicore parallelism in `proofs` via `maybe-rayon`. Off by
# default (matches upstream's optional posture).
multicore = ["maybe-rayon/threads"]
# Gates the upstream test modules in `utilities/*` that
# reference parts of `halo2_gadgets` Adamant has not vendored
# yet (`crate::ecc`, `crate::sinsemilla`, plus the upstream
# `uint` dev-dep). Phase 6.8b.3 (ECC fork) re-enables the
# subset that becomes available; the sinsemilla-dependent test
# subset stays disabled because Adamant does not need
# Sinsemilla (Orchard-specific; not used by the §7.3.2
# validity circuit).
vendored-test-suite = []

# Lint posture for forked upstream code, mirroring the Phase
# 5/5b.1a/b precedent for vendored Sui-Move crates (see
# `vendor/move-binary-format/Cargo.toml`). Running our strict
# workspace clippy posture against byte-identical upstream code
# produces noise rather than signal — style lints belong in
# upstream's process; we trust the tagged version.
#
# `unsafe_code = forbid` matches upstream's own
# `#![deny(unsafe_code)]` in both `halo2_poseidon`'s and
# `halo2_proofs`'s lib.rs.
#
# Additional `allow` entries below catch rustc-level warnings
# that fire against the vendored sources but are not present
# (or are filtered) in upstream's own CI configuration.
[lints.rust]
unsafe_code = "forbid"
# Upstream `halo2_proofs` references several `#[cfg(feature =
# "...")]` gates for features Adamant has not enabled (e.g.,
# `batch`, `dev-graph`, `floor-planner-v1-legacy-pdqsort`).
# Suppressing here avoids forcing a feature-flag decision before
# the §7.3.2 validity-circuit work scopes which features
# Adamant actually needs.
unexpected_cfgs = "allow"
# Upstream test modules carry helper structs/traits that aren't
# used in the subset of tests Adamant exercises. Allowing keeps
# the fork byte-identical.
dead_code = "allow"
# Upstream `proofs::poly::commitment` carries an elided-lifetime
# pattern current rustc flags as confusing. Upstream-style.
elided_lifetimes_in_paths = "allow"
mismatched_lifetime_syntaxes = "allow"
# Upstream `proofs` test imports include rayon traits behind
# feature gates that may or may not be active.
unused_imports = "allow"
# Upstream `proofs::dev::cost` uses doc-comments on expression-
# field positions where rustdoc doesn't generate output.
unused_doc_comments = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
# `style` and `complexity` are sub-groups of `all` already
# allowed above, but listing explicitly makes the posture
# unambiguous on inspection.
