[package]
name = "adamant-light"
description = "Adamant light client. Phase 9.2 / 9.3 deliverable: phone-verifiable light client per whitepaper §8.9. Tracks epoch boundaries via the Phase 7.9 LightClientState; surfaces tier signal + state commitment for consumer-side queries; verifies recursive-proof envelopes per §8.5 at epoch boundaries (Phase 9.3); verifies §8.9 state-membership / state-non-membership claims against the latest commitment using Phase 4 sparse-Merkle-tree proofs (Phase 9.3.1). The library is consumable by wallets + service nodes; the binary is the standalone light-client daemon."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
adamant-consensus = { path = "../adamant-consensus" }
adamant-network = { path = "../adamant-network" }
adamant-privacy = { path = "../adamant-privacy" }
adamant-state = { path = "../adamant-state" }
serde = { workspace = true }
bcs = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "adamant-light"
path = "src/main.rs"
