[package]
name = "adamant-network"
description = "Networking layer per whitepaper §9. Phase 7.8 deliverable: libp2p substrate integration, gossipsub-based vertex + transaction propagation, encrypted-mempool wire types, anti-DoS submission proofs, peer discovery + bootstrap, mempool design. Phase 7.8.0 (this commit) ships the networking-substrate-agnostic wire-format foundation: NetworkTransaction (§9.3.1), NetworkMessage envelope, GossipsubTopic identifiers. libp2p integration lands at Phase 7.8.1 per the §14.4 Decision 4 resolution."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
adamant-consensus = { path = "../adamant-consensus" }
serde = { workspace = true }
bcs = { workspace = true }

[lints]
workspace = true
