[package]
name = "adamant-network"
description = "Networking layer per whitepaper §9. Phase 7.8 deliverable: libp2p substrate integration, gossipsub-based vertex + transaction propagation, encrypted-mempool wire types, anti-DoS submission proofs, peer discovery + bootstrap, mempool design. Phase 7.8.0 (this commit) ships the networking-substrate-agnostic wire-format foundation: NetworkTransaction (§9.3.1), NetworkMessage envelope, GossipsubTopic identifiers. libp2p integration lands at Phase 7.8.1 per the §14.4 Decision 4 resolution."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
adamant-consensus = { path = "../adamant-consensus" }
adamant-crypto = { path = "../adamant-crypto" }
serde = { workspace = true }
bcs = { workspace = true }
# libp2p + tokio admitted at Phase 7.8.1 per CLAUDE.md §14.4
# Decision 4 (RESOLVED Option A). Production-side wrapper around
# libp2p's API; libp2p is NOT forked. The Adamant network layer
# pins libp2p's wire-protocol configuration per §9.2.2.
libp2p = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
