[package]
name = "adamant-privacy"
description = "Privacy layer per whitepaper §7. Phase 6 deliverable: note model, stealth addresses, shielded execution circuits, view keys, encrypted memos, anonymity-set hygiene."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
adamant-crypto = { path = "../adamant-crypto" }
adamant-types = { path = "../adamant-types" }
# Halo 2 ecosystem (zcash variant) — Cat C bridge per CLAUDE.md
# §14.4 Decision 1. Pulls in:
# - Poseidon hash on Pallas base field per whitepaper §3.3.3
#   (post-amendment instance 31), used for note commitments
#   (§7.1), nullifier derivation (§7.1.2), and GNCT Merkle hashes
#   (§7.1.3).
# - Pasta curves (Pallas / Vesta) for Halo 2 native arithmetic
#   per §3.9.1.
# - halo2_proofs is pulled transitively when validity-circuit
#   work lands at Phase 6.8.
#
# The §14.4 Decision 1 posture (C1 / C2 / C3) is implicit-C3
# (bounded-ecosystem treatment) for the interim. Phase 6.8 plan-
# gate revisits whether to fork halo2_gadgets into adamant-halo2
# (path C2) before validity circuits land. Phase 6.0–6.7 work
# only consumes the Poseidon out-of-circuit primitive surface;
# the deferral question doesn't block these sub-arcs.
halo2_gadgets = { workspace = true }
pasta_curves = { workspace = true }
# rand_core 0.10 alias used by `encrypted_note::encrypt_note_for_recipient`'s
# `CryptoRng` bound — matches the RustCrypto-ecosystem trait surface
# `ml-kem` consumes for the encapsulation RNG (see
# `adamant-crypto/Cargo.toml` for the full ecosystem-skew rationale).
rand_core_0_10 = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
bcs = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }
# Test-only RNG + constant-time compare for ML-KEM round-trip and
# shared-secret equality probes in `stealth::tests`. The
# `getrandom` 0.4 entry mirrors `adamant-crypto`'s Cargo.toml: it
# supplies `SysRng` and re-exports the `rand_core` 0.10 trait
# surface that `ml-kem`'s `CryptoRng` bound expects (RustCrypto
# ecosystem skew, see `crates/adamant-crypto/Cargo.toml`).
# `subtle` is already in the workspace's locked bounded-ecosystem
# set per CLAUDE.md §14.1 (Cat B).
getrandom = { version = "0.4", features = ["std", "sys_rng"] }
subtle = { workspace = true }

[lints]
workspace = true
