[package]
name = "adamant-privacy"
description = "Privacy layer per whitepaper §7. Phase 6 deliverable: note model, stealth addresses, shielded execution circuits, view keys, encrypted memos, anonymity-set hygiene."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
adamant-crypto = { path = "../adamant-crypto" }
adamant-types = { path = "../adamant-types" }
# Halo 2 ecosystem — Adamant-owned fork per CLAUDE.md §14.4
# Decision 1 (resolved as Path C2). Production-binary
# dependency graph contains zero upstream `halo2_*` crates;
# `adamant-halo2` is the Adamant fork. Phase 6.8b.0 vendors
# the out-of-circuit Poseidon primitives surface (the smallest
# Cat C bridge); subsequent sub-arcs (6.8b.1+) extend the fork
# to the in-circuit `Pow5Chip`, ECC chips for Pallas, and the
# §7.3.2 validity-circuit gadgets.
adamant-halo2 = { path = "../adamant-halo2" }
pasta_curves = { workspace = true }
# rand_core 0.10 alias used by `encrypted_note::encrypt_note_for_recipient`'s
# `CryptoRng` bound — matches the RustCrypto-ecosystem trait surface
# `ml-kem` consumes for the encapsulation RNG (see
# `adamant-crypto/Cargo.toml` for the full ecosystem-skew rationale).
rand_core_0_10 = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
bcs = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }
# Test-only RNG + constant-time compare for ML-KEM round-trip and
# shared-secret equality probes in `stealth::tests`. The
# `getrandom` 0.4 entry mirrors `adamant-crypto`'s Cargo.toml: it
# supplies `SysRng` and re-exports the `rand_core` 0.10 trait
# surface that `ml-kem`'s `CryptoRng` bound expects (RustCrypto
# ecosystem skew, see `crates/adamant-crypto/Cargo.toml`).
# `subtle` is already in the workspace's locked bounded-ecosystem
# set per CLAUDE.md §14.1 (Cat B).
getrandom = { version = "0.4", features = ["std", "sys_rng"] }
subtle = { workspace = true }

[features]
# Gate behind this feature to opt into MockProver runs at the
# production GNCT depth (DEPTH=64 → K~17 → ~131k rows). Default
# `cargo test` skips them; `cargo test -p adamant-privacy
# --features expensive-tests` runs them. See
# `circuit::validity` module docs for rationale.
expensive-tests = []

[lints]
workspace = true
