[package]
name = "adamant-state"
description = "Object model and state management for the Adamant protocol. Phase 4's first deliverable: ObjectId derivation per whitepaper section 5.1.1. Subsequent commits will add storage, state transitions, and the global note-commitment-tree skeleton per CLAUDE.md section 6."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
adamant-crypto = { path = "../adamant-crypto" }
adamant-types = { path = "../adamant-types" }
serde = { workspace = true }
bcs = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }

[lints]
workspace = true
