[package]
name = "adamant-vm"
description = "Adamant Move virtual machine. Phase 5's first deliverable: the canonical Transaction format and TxHash derivation per whitepaper sections 6.0 and 6.0.7. Subsequent commits will add the bytecode format, the AVM runtime, multi-dimensional gas accounting, module deployment, and the parallel execution scheduler per whitepaper section 6."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
adamant-bytecode-format = { workspace = true }
adamant-crypto = { path = "../adamant-crypto" }
adamant-types = { path = "../adamant-types" }
# Vendored Sui-Move bytecode crate per whitepaper §6.2.1.1.
# After Phase 5/5b.1b's type-fork, adamant-vm's production
# paths consume Adamant-owned types from adamant-bytecode-format
# end-to-end; this dep is retained for the transitional
# validator wrapper bridge in `validator/mod.rs` (Sui-side
# deserializer + Sui-verifier path) and for the `to_sui_module`
# BCS round-trip conversion target used at test time only for
# cross-validation per §6.2.1.8.
#
# `features = ["wasm"]` enables Sui's gated Serialize/Deserialize
# derives on bytecode-format types, required for the BCS round-
# trip in `module::to_sui_module` (test-time path) and for the
# cross-validation tests in `adamant-bytecode-format`. The
# feature does not affect production code paths in adamant-vm
# (production code never serialises Sui types). Both this dep
# and the `wasm` feature are removed in Phase 5/5b.5 along with
# the validator wrapper bridge.
move-binary-format = { workspace = true, features = ["wasm"] }
# move-core-types provides U256 used by the bytecode wire format
# (`Bytecode::LdU256` operand). Re-exported transitively via
# move-binary-format but referenced directly here for the
# little-endian U256 encoding per §6.2.1.5 amendment 83bb1e9.
# Also provides the `Metadata` type (`metadata::Metadata`) the
# §6.2.1.6 validator rules consult, and `AccountAddress` used at
# the module-handle / address-pool layer.
move-core-types = { workspace = true }
# Vendored Sui-Move bytecode verifier (Batch 2) per whitepaper
# §6.2.1.6; the inherited verifier passes (type safety, reference
# safety, linearity, etc.) run before Adamant-specific rules in
# `validator::verify_module`. Transitional bridge — Phase 5/5b.4
# and 5/5b.5 replace this with Adamant-native per-function passes.
move-bytecode-verifier = { workspace = true }
# Provides `VerifierConfig` consumed by the inherited verifier;
# `AdamantVerifierConfig` wraps it with `deprecate_global_storage_ops`
# locked to `true` as defense-in-depth (§6.2.1.6 Rule 5's primary
# enforcement point is in `adamant_deserialize`'s strict mode
# post-Phase 5/5a).
move-vm-config = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
bcs = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }
# Required by Layer B cross-validation tests for the
# `module_pass::ability_field_requirements` pass (B-2.3).
# Sui's `ability_field_requirements::verify_module` takes a
# `Meter` parameter; tests pass `DummyMeter` from this crate.
# Test-only; never reaches the production binary's dependency
# graph (consistent with the resistant-proof posture per
# §6.2.1.8: `move-*` crates are test-only or build-tooling
# only). Removed alongside the validator wrapper bridge in
# Phase 5/5b.5.
move-bytecode-verifier-meter = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
