[package]
name = "adamant-vm"
description = "Adamant Move virtual machine. Phase 5's first deliverable: the canonical Transaction format and TxHash derivation per whitepaper sections 6.0 and 6.0.7. Subsequent commits will add the bytecode format, the AVM runtime, multi-dimensional gas accounting, module deployment, and the parallel execution scheduler per whitepaper section 6."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
adamant-bytecode-format = { workspace = true }
adamant-crypto = { path = "../adamant-crypto" }
# adamant-state provides §5.1.1 derive_object_id, consumed by the
# Phase 5/6.8.C `adamant::module::deploy` runtime stdlib handler
# for ObjectId derivation of newly-deployed Module objects per the
# §6.4.1 amendment.
adamant-state = { path = "../adamant-state" }
adamant-types = { path = "../adamant-types" }
# Graph algorithms for the recursive-data-definition cycle
# detector (Phase 5/5b.2 B-3.2 `module_pass::recursive_data_def`)
# and the generic-instantiation-loop detector (B-3.3
# `module_pass::instantiation_loops`). Petgraph is the first
# non-Sui-vendor-derived production dep on `adamant-vm`.
# MSRV verified at B-3.2 start: petgraph 0.8.3 documents
# `rust-version = "1.64"`; Adamant's `rust-toolchain.toml`
# pins channel `1.95.0`. License Apache-2.0 / MIT dual,
# compatible with Adamant's Apache 2.0. Production-dep audit
# template established at B-3.2 in
# `validator/module_pass/PROVENANCE.md`.
petgraph = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
bcs = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }
# Vendored Sui-Move crates moved from [dependencies] to
# [dev-dependencies] at Phase 5/5b.5 E-1b alongside the Sui-
# verifier bridge tear-out per whitepaper §6.2.1.8's resistant-
# proof posture. None of these crates appears in the production
# binary's dependency graph; the build-system independence
# check at `tests/no_sui_in_production_deps.rs` enforces this
# mechanically via cargo-metadata's resolved-tree walk.
#
# Test-only roles:
# - move-binary-format (with wasm): provides Sui's CompiledModule
#   for the test-only `to_sui_module` BCS round-trip path and
#   for Layer B cross-validation parity tests. The wasm feature
#   stays on the dev-dep entry because cross-validation needs
#   serde derives on Sui's bytecode-format types.
# - move-core-types: provides AccountAddress + Identifier +
#   Metadata for the test-only Sui shape construction.
# - move-bytecode-verifier: provides Sui's verifier passes
#   (control_flow + code_unit_verifier::verify_module +
#   AbilityCache) consumed by the Layer B parity tests.
# - move-vm-config: provides VerifierConfig + the upstream
#   DEFAULT_* structural-limits constants for the upstream-
#   parity pin in `validator/config.rs`.
# - move-bytecode-verifier-meter: provides DummyMeter for
#   Layer B parity tests; here since Phase 5/5b.2 B-2.3.
move-binary-format = { workspace = true, features = ["wasm"] }
move-core-types = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-vm-config = { workspace = true }
move-bytecode-verifier-meter = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
